--- a/WeddingApp/WeddingApp/Views/UserControls/WeddingHallUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/WeddingHallUC.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              d:DesignHeight="710" d:DesignWidth="1120">
 
@@ -15,11 +15,12 @@
         <Grid Grid.Row="0" Margin="10 10 10 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.3*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="1.5*"></ColumnDefinition>
+                <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                <ColumnDefinition Width="0.5*"></ColumnDefinition>
+                <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="0.8*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock
                 Text="STT"
@@ -46,7 +47,8 @@
                 Foreground="Black"
                 Grid.Column="2" />
             <TextBlock
-                        Text="Số lượng bàn   tối đa"
+                        Text="Số lượng bàn
+                tối đa"
                         FontSize="18"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
@@ -57,7 +59,8 @@
                         TextAlignment="Center"
                         Padding="0" />
             <TextBlock
-                        Text="Đơn giá bàn tối thiểu"
+                        Text="Đơn giá
+                bàn tối thiểu"
                         FontSize="18"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
@@ -76,6 +79,17 @@
                         Grid.Column="5"
                         TextWrapping="Wrap"
                         TextAlignment="Center" />
+            <Button
+                    Style="{StaticResource GreenBtn}"
+                    Content="Thêm"
+                    Width="100"
+                    Height="30"
+                    FontSize="20"
+                    Foreground="White"
+                    VerticalAlignment="Center"
+                    Grid.Column="6"
+                    Command="{Binding AddProductCommand}"
+                    CommandParameter="{Binding ElementName= EditUC}" />
         </Grid>
         <Separator Width="auto" Height="3" Margin="20 0" VerticalAlignment="Bottom"></Separator>
         <!--SOURCE CỦA LISTVIEW NÀY LÀ 1 LIST RECEIPT-->
@@ -83,11 +97,12 @@
             <Grid Height="100" Margin="10 5 10 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.3*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="1.5*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.5*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.8*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="0.8*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <!--mã sảnh-->
                 <TextBlock
@@ -134,7 +149,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center" />
                 <!--GHI CHÚ-->
-                <ScrollViewer Grid.Column="5" Margin="0 0 0 3">
+                <ScrollViewer Grid.Column="5" Margin="0 0 0 3" VerticalScrollBarVisibility="Hidden">
                     <TextBlock
                                 Text="MỘT ĐOẠN VĂN RẤT DÀIIIIIIIIIIIIIIIIII
                                 IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
@@ -147,7 +162,26 @@
                                 TextWrapping="Wrap" />
                 </ScrollViewer>
 
-                <Separator Width="auto" Height="3" Margin="10 0" VerticalAlignment="Bottom" Grid.ColumnSpan="6"></Separator>
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Column="6">
+
+                    <Button
+                  Style="{StaticResource MaterialDesignIconForegroundButton}"
+                  ToolTip="MaterialDesignIconForegroundButton"
+                  IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Foreground="Black"
+                        Margin="10 0">
+                        <materialDesign:PackIcon Kind="Edit" />
+                    </Button>
+                    <Button
+                  Style="{StaticResource MaterialDesignIconForegroundButton}"
+                  ToolTip="MaterialDesignIconForegroundButton"
+                  IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                    Foreground="Black">
+                        <materialDesign:PackIcon Kind="Delete" />
+                    </Button>
+                </StackPanel>
+
+                <Separator Width="auto" Height="3" Margin="10 0" VerticalAlignment="Bottom" Grid.ColumnSpan="7"></Separator>
             </Grid>
             <!--<ListView.ItemTemplate>
                         <DataTemplate>
